# DimClaw

./: .gitignore  Cargo.toml  README.md
adapters/: mod.rs
agents/: agent.rs  custom.rs  executor.rs  llm_json.rs  mod.rs  planner.rs  recovery.rs  verifier.rs
channels/: feishu.rs  mod.rs  telegram.rs  webhook.rs
configs/: agents.toml  channels.toml  default.toml  hands.toml  marketplace.toml  mod.rs  models.toml  runtime.example.toml  runtime.toml  security.toml
core/: api.rs  channel_router.rs  hand_scheduler.rs  llm_tools.rs  logger.rs  mod.rs  queue.rs  runtime.rs  session.rs  state_machine.rs  storage.rs  task.rs  task_service.rs
docs/: DEPLOY_UBUNTU.md  实际开发巡检报告.md
feishu/: mod.rs
memory/: embedder.rs  mod.rs  search.rs  sqlite_memory.rs
plugins/: downloader.rs  feishu_plugin.rs  manager.rs  manifest.rs  mod.rs  plugin_trait.rs  telegram_plugin.rs
providers/: fallback.rs  mod.rs  openai_compatible.rs  traits.rs  types.rs
scheduler/: mod.rs
scripts/: deploy_ubuntu.sh  download_skills.sh  import_openclaw_skills.sh  install.ps1  install.sh  openclaw_to_dimclaw.py  run_once.sh  undeploy_ubuntu.sh
security/: audit.rs  mod.rs
skills/: browser_automator.rs  browser_click.rs  browser_fill.rs  browser_open.rs  browser_screenshot.rs  categories.rs  custom.rs  ffmpeg.rs  file_copy.rs  file_delete.rs  file_list.rs  file_move.rs  file_read.rs  file_write.rs  guard.rs  http_request.rs  manager.rs  marketplace.rs  mod.rs  openclaw_adapter.rs  process_kill.rs  process_list.rs  schedule_task.rs  script_execute.rs  service_control.rs  shell_command.rs  (+4 more)
(+42 files in other folders)
